src/objects/Account_Asset__c.object
<CustomObject>
    <fields>
        <fullName>MC_Spend_per_Month__c</fullName>
        <label>MC Spend per Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mail_Merge__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mail Merge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manual_Billing_Required__c</fullName>
        <formula>TEXT(Opportunity__r.Manual_Billing_Required__c)</formula>
        <label>Manual Billing Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketer_Type_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Marketer Type Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Marketer_Type__c</fullName>
        <label>Marketer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exclusive</fullName>
                </value>
                <value>
                    <fullName>Dual</fullName>
                </value>
                <value>
                    <fullName>Non Exclusive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Materials_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Materials Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merchant_Funded_Discounts__c</fullName>
        <label>Merchant Funded Discounts</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_Number__c</fullName>
        <formula>Name +&quot; - &quot;+ F1_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name / Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Card_Block_Issued__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Card Block Issued</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Plus_Card_Block__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Plus Card Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Super_Plus_Card_Block__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Super Plus Card Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Franchise_Act__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Franchise Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Franchise_Est__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Franchise Estimated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Security_Amount__c</fullName>
        <formula>Current_Security_Amount__c + Increase_or_Decrease_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Security Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Renewal_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>General Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notice_of_Term_Period__c</fullName>
        <label>Notice of Term Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>2 Months</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>4 Months</fullName>
                </value>
                <value>
                    <fullName>5 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>7 Months</fullName>
                </value>
                <value>
                    <fullName>8 Months</fullName>
                </value>
                <value>
                    <fullName>9 Months</fullName>
                </value>
                <value>
                    <fullName>10 Months</fullName>
                </value>
                <value>
                    <fullName>11 Months</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Annual_Settlement_Value__c</fullName>
        <description>Used as criteria for Wex Europe Workflow</description>
        <formula>Opportunity__r.Annual_Settlement_Value__c</formula>
        <label>Opportunity Annual Settlement Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Email__c</fullName>
        <description>Used for email alerts triggered by changes to the Account Asset</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_First_Name__c</fullName>
        <formula>Opportunity__r.Owner_First_Name__c</formula>
        <label>Opportunity Owner First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>Opportunity__r.Owner_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_ID__c</fullName>
        <description>Will be used in link to opportunity for notification emails</description>
        <formula>Opportunity__r.Id</formula>
        <label>Opportunity Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Record_Type__c</fullName>
        <description>Used as criteria for Wex Europe Workflow</description>
        <formula>Opportunity__r.RecordType.Name</formula>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>text(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Account Assets</relationshipLabel>
        <relationshipName>Account_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originating_Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAC_Pride_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PAC Pride ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Number__c</fullName>
        <formula>Account__r.Parent_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Host</label>
        <referenceTo>Account_Asset__c</referenceTo>
        <relationshipLabel>Related Hosts</relationshipLabel>
        <relationshipName>Account_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participating_in_Pacific_Pride_Meetings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participating in Pacific Pride Meetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pay_Period__c</fullName>
        <label>Pay Period</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Photos__c</fullName>
        <label>Photos</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need New Site Pictures</fullName>
                </value>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NP</fullName>
                </value>
                <value>
                    <fullName>Classic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Portal_Set_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Set Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Units__c</fullName>
        <label>Potential Units</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_per_Card__c</fullName>
        <label>Price per Card</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pricing Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pride_Complete_Card_Block__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PrideComplete Card Block</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <formula>TEXT( Opportunity__r.Product_Interest__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Interest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VProduct</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Account Assets</relationshipLabel>
        <relationshipName>Account_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Monthly_Gallons__c</fullName>
        <formula>Opportunity__r.Projected_Monthly_Gallons__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Monthly Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pump_Striping_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pump Striping Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pumped_First_Gallon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked when the first gallons have been pumped on this Account Asset.  Updated manually by rep.</description>
        <inlineHelpText>This is checked when the first gallons have been pumped on this Account Asset.  Updated manually by rep.</inlineHelpText>
        <label>Pumped First Gallon?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assets6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Application_Rejected_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the reason why the application has been rejected, this will be emailed to the Opportunity Owner</inlineHelpText>
        <label>Reason Application Rejected Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Terminated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason Terminated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Waived__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason Waived</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Statement_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Relationship Manager&apos;s reference</inlineHelpText>
        <label>Rebate Statement Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rebate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recall</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Receivable_Manager__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Receivable Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Source_Created_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Source Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Source_Creator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Source Creator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Source_Last_Modified_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Source Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Source_Merge_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Source Merge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Amount__c</fullName>
        <label>Reimbursement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reimbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Reason__c</fullName>
        <label>Reimbursement Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Submit</fullName>
                </value>
                <value>
                    <fullName>Didn&apos;t Meet Qualification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reimbursement__c</fullName>
        <label>Reimbursement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Bonus__c</fullName>
        <label>Renewal Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Fee_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Renewal Fee Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Risk_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Grade__c</fullName>
        <label>Risk Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Result__c</fullName>
        <label>Risk Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Retained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Type__c</fullName>
        <label>Risk Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Threat</fullName>
                </value>
                <value>
                    <fullName>Contract Expiration</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Not at Risk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFTP_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFTP Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SRS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SRS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assets4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SSM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Assets5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Infomed__c</fullName>
        <label>Sales Informed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Amount_Change_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Security Amount Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Amount_Change__c</fullName>
        <label>Security Amount Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Increase</fullName>
                </value>
                <value>
                    <fullName>Decrease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Cancelation_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Security Cancelation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Deadline_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Security Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Security_Expiration_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Security Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ship Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <formula>Account__r.ShippingStreet &amp; BR() &amp; 
Account__r.ShippingCity &amp; &quot;, &quot; &amp; Account__r.ShippingState &amp; &quot; &quot; &amp; 
Account__r.ShippingPostalCode &amp; BR() 
&amp; Account__r.ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signage_Credit_Granted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signage Credit Granted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signage_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signage Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed_But_Not_Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for marketing automation</description>
        <inlineHelpText>used for marketing automation</inlineHelpText>
        <label>Signed But Not Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signing_Bonus__c</fullName>
        <label>Signing Bonus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amerinet</fullName>
                </value>
                <value>
                    <fullName>Pacific Pride</fullName>
                </value>
                <value>
                    <fullName>PrideNet</fullName>
                </value>
                <value>
                    <fullName>PrideNet Retail</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Upgrades__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Site Upgrades</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_visit_per_Rollout__c</fullName>
        <label>Site visit per Rollout</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Maps_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Maps Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>States_of_Operation__c</fullName>
        <label>States of Operation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original Franchise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_N__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Under Executive Review - Do Not Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>